# auto_kickboard

./: README.md
auto_kickboard_controller/: CMakeLists.txt  package.xml
auto_kickboard_libs/: CMakeLists.txt  package.xml
auto_kickboard_libs/include/auto_kickboard_libs/: auto_kickboard.hpp  robot_node.hpp
auto_kickboard_libs/launch/: ssing.launch
auto_kickboard_libs/src/: auto_kickboard.cpp  controller.cpp
auto_kickboard_teleop/: CMakeLists.txt  package.xml
auto_kickboard_teleop/src/: ssing_keyboard.cpp
ssing_msgs/: CMakeLists.txt  package.xml
ssing_msgs/msg/: DynamixelCommand.msg  Ssing.msg
